--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,20 +1,47 @@
 @import "../shared/helper";
-
 %legend {
   height: px(40); display: flex; align-items: center;
   justify-content: center; flex-wrap: wrap; padding-right: px(10);
   > span {display: inline-block; width: px(16); height: px(10);
     border-radius: px(2); margin: 0 px(10);}
 }
-
-.home {flex: 1;display: flex;flex-direction: column;
-  background: #010310; color: white;
+.home {flex: 1;
+  display: flex;flex-direction: column;
+  background: center center no-repeat;
+  background-size: cover;
+  color: white;
   font-size: px(16);
   > header {
     height: px(99);
     background-size: cover;
     width: px(2420);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: px(60);
     margin: 0 auto;
+    position: relative;
+    left: 0;
+    right: 0;
+
+    .header-time {
+      position: absolute;
+      top: px(10);
+      font-size: px(35);
+      right: px(300);
+      color: #00bef8;
+
+    }
+    .header-logout {
+      top: px(10);
+      font-size: px(20);
+      position: absolute;
+      padding:2px 10px;
+      right: px(50);
+      border: 1px solid #0e325f;
+
+    }
   }
   > footer {
     height: px(68);
@@ -39,7 +66,7 @@
     grid-row-gap: px(28);
     > section {text-align: center;}
     .bordered {
-      border: 1px solid #0764bc;
+      border: 1px solid #00bef8;
       border-radius: 4px;
       position: relative;
       box-shadow: 0 0 2px 0 #0e325f, inset 0 0 2px 0 #0e325f;
@@ -206,7 +233,6 @@
           td {height: px(50); width: px(84);
             background: #1c2456;
           }
-
         }
       }
     }
