--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -24,23 +24,20 @@
     position: relative;
     left: 0;
     right: 0;
-
     .header-time {
       position: absolute;
       top: px(10);
       font-size: px(35);
       right: px(300);
       color: #00bef8;
-
     }
     .header-logout {
       top: px(10);
       font-size: px(20);
       position: absolute;
-      padding:2px 10px;
+      padding: 2px 10px;
       right: px(50);
       border: 1px solid #0e325f;
-
     }
   }
   > footer {
@@ -126,6 +123,26 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      /*
+      .box-title {
+        position: relative;
+        left: 0;
+        right: 0;
+        flex-shrink: 0;
+        font-size: px(22);
+        background: center center no-repeat;
+        background-size: cover;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & > img {
+          width: 60%;
+        }
+        & > span {
+          position: absolute;
+        }
+      }
+      */
       h2 {
         flex-shrink: 0;
         border: 1px solid #0a5299;
