--- a/src/components/WaveBall/index.scss
+++ b/src/components/WaveBall/index.scss
@@ -4,17 +4,14 @@
   position: relative;
   & > img {
     position: absolute;
+    top:50%;
     left: 50%;
     right: 0;
-    transform: translateX(-50%);
-
-
+    transform: translate(-50%,-50%);
   }
-  width: 50%;
   background:  no-repeat;
   background-size: cover;
-  .canvas {
+  #canvas {
     width: 100%;
-    height: 100%;
   }
 }
