--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,321 +1,377 @@
 @import "../shared/helper";
 %legend {
-  height: px(40); display: flex; align-items: center;
-  justify-content: center; flex-wrap: wrap; padding-right: px(10);
-  > span {display: inline-block; width: px(16); height: px(10);
-    border-radius: px(2); margin: 0 px(10);}
+	height: px(40);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+	padding-right: px(10);
+	> span {
+		display: inline-block;
+		width: px(16);
+		height: px(10);
+		border-radius: px(2);
+		margin: 0 px(10);
+	}
 }
-.home {flex: 1;
-  display: flex;flex-direction: column;
-  background: center center no-repeat;
-  background-size: cover;
-  color: white;
-  font-size: px(16);
-  > header {
-    height: px(99);
-    background-size: cover;
-    width: px(2420);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    font-size: px(60);
-    margin: 0 auto;
-    position: relative;
-    left: 0;
-    right: 0;
-    .header-time {
-      position: absolute;
-      top: px(10);
-      font-size: px(35);
-      right: px(300);
-      color: #00bef8;
-    }
-    .header-logout {
-      top: px(10);
-      font-size: px(20);
-      position: absolute;
-      padding: 2px 10px;
-      right: px(50);
-      border: 1px solid #0e325f;
-    }
-  }
-  > footer {
-    height: px(68);
-    border: 1px solid #0d2d59;
-    margin: px(20) 0 1px;
-    border-radius: 4px;
-    background: #0c0d2b;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  > main {
-    width: px(2420);
-    margin: 0 auto;
-    padding-top: px(30);
-    flex: 1;
-    display: grid;
-    grid-template:
-      "box3 box4 box5" 755fr
-      "box3 box4 box5" 363fr / 747fr 811fr 747fr;
-    grid-column-gap: px(28);
-    grid-row-gap: px(28);
-    > section {text-align: center;}
-    .bordered {
-      border: 1px solid #00bef8;
-      border-radius: 4px;
-      position: relative;
-      box-shadow: 0 0 2px 0 #0e325f, inset 0 0 2px 0 #0e325f;
-      background: rgba(15, 17, 58, 0.6);
-      &::before {
-        pointer-events: none;
-        content: '';position: absolute;left: 0;right: 0;bottom: 0;top: 0;
-        border-radius: 4px;
-        box-shadow: 17px 0 0 -16px #0e325f,
-        -17px 0 0 -16px #0e325f,
-        0 17px 0 -16px #0e325f,
-        0 -17px 0 -16px #0e325f,
-        9px 0 0 -8px #0d4483,
-        -9px 0 0 -8px #0d4483,
-        0 9px 0 -8px #0d4483,
-        0 -9px 0 -8px #0d4483,;
-      }
-    }
-    .bordered2 {
-      border: 1px solid #00bef8;
-      position: relative;
-      box-shadow: 0 0 2px 0 #0e325f, inset 0 0 2px 0 #0e325f;
-      background: #0f113a;
-      &::before {
-        pointer-events: none;
-        content: '';position: absolute;left: 0;right: 0;bottom: 0;top: 0;
-        border-radius: 4px;
-        box-shadow: 17px 0 0 -16px #0e325f,
-        -17px 0 0 -16px #0e325f,
-        0 17px 0 -16px #0e325f,
-        0 -17px 0 -16px #0e325f,
-        9px 0 0 -8px #0d4483,
-        -9px 0 0 -8px #0d4483,
-        0 9px 0 -8px #0d4483,
-        0 -9px 0 -8px #0d4483,;
-      }
-    }
-    /*
-    > .section1 {
-      grid-area: box3;
-      display: flex;
-      justify-content: space-between;
-    }
-    > .section2 {
-      grid-area: box3;
-      display: flex;
-      justify-content: space-between;
-    }
-    */
-    > .section3 {
-      grid-area: box3;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      .温湿度 {
-        height: px(700);
-      }
-      .section3-wrapper {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        & > div {
-          padding: 10px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          flex-direction: column;
-          width: 40%;
-          > .button {
-            cursor: pointer;
-            padding: 2px 8px;
-            background: linear-gradient(180deg, #024ad8, #6993ff)
-          }
-        }
-      }
-    }
-    > .section4 {
-      grid-area: box4;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-    > .section5 {
-      grid-area: box5;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+.home {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	background: center center no-repeat;
+	background-size: cover;
+	color: white;
+	font-size: px(16);
+	> header {
+		height: px(99);
+		background-size: cover;
+		width: px(2420);
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-weight: bold;
+		font-size: px(60);
+		margin: 0 auto;
+		position: relative;
+		left: 0;
+		right: 0;
+		.header-time {
+			position: absolute;
+			top: px(10);
+			font-size: px(35);
+			right: px(300);
+			color: #00bef8;
+		}
+		.header-logout {
+			top: px(10);
+			font-size: px(20);
+			position: absolute;
+			padding: 2px 10px;
+			right: px(50);
+			border: 1px solid #0e325f;
+		}
+	}
 
-    }
-    .管辖统计, .破获排名, .发案趋势, .案发时段, .战果, .籍贯, .年龄段, .案发类型, .案发街道, .作案手段, .温湿度 {
-      height: px(315);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      /*
-      .box-title {
-        position: relative;
-        left: 0;
-        right: 0;
-        flex-shrink: 0;
-        font-size: px(22);
-        background: center center no-repeat;
-        background-size: cover;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        & > img {
-          width: 60%;
-        }
-        & > span {
-          position: absolute;
-        }
-      }
-      */
-      h2 {
-        margin-bottom: px(10);
-        flex-shrink: 0;
-        border: 1px solid #0a5299;
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
-        font-size: px(22);
-        line-height: px(24);
-        padding: px(10) px(28);
-        text-shadow: 0 0 px(3) white;
-      }
-      .charts {
-        width: 100%;flex: 1;
-        display: flex;
-      }
-      .chart {
-        flex: 1;
-        width: 100%;
-      }
-    }
-    .发案趋势, .案发时段 {
-      height: px(363);
-    }
-    .chart11, .chart12 {
-      flex: 1;display: flex; flex-direction: column;
-      > .chart {display: flex;
-        > .main {flex: 1}
-      }
-      .legend {@extend %legend;}
-    }
-    .年龄段 {display: flex;flex-direction: column;
-      height: px(363);
+	> main {
+		width: px(2420);
+		margin: 0 auto;
+		padding-top: px(30);
+		flex: 1;
+		display: grid;
+		grid-template:
+			"box3 box4 box5" 755fr
+			"box3 box4 box5" 363fr / 5fr 10fr 5fr;
+		grid-column-gap: px(28);
+		grid-row-gap: px(28);
+		.switch-bar {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			padding: px(30) px(20);
+			> span {
+				margin: 0 px(50);
+			}
 
-      &-图1, &-图2, &-图3 {
-        flex: 1;display: flex; flex-direction: column;
-      }
-      &-图1, &-图2 {
-        .legend { @extend %legend;
-          .male {background: #33a4fa;}
-          .female {background: #8d70f8;}
-        }
-        .chart {
-          position: relative;
-          display: flex;
-          > .main {flex: 1;}
-          > .text {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
-            color: #33a4fa; font-size: px(40); text-shadow: 0 0 px(20) #33a4fa;font-weight: bold;}
-        }
-      }
-      &-图2 {
-        width: px(290); flex-shrink: 0;
-        .legend {
-          justify-content: flex-start;
-        }
-      }
-      &-图3 {
-        border: 1px solid #08397d;
-        h3 {font-size: px(20); color: #7ab6db; margin-top: px(6);}
-      }
-    }
-    .籍贯 {
-      height: px(753); background: transparent;
-      > .wrapper {
-        position: relative;width: 100%;flex: 1;
-        display: flex; flex-direction: column;
-        .chart {flex: 1;}
-        .legend {
-          position: absolute;top: px(40);left: px(20);display: flex;
-          align-items: center;
-          font-size: px(22); padding: px(20) px(10) px(20) 0;
-          border-radius: 0;
-          .icon {
-            margin: 0 px(10);
-            display: inline-block;
-            width: px(16);
-            height: px(16);
-            border-radius: 50%;
-            background: #1cecd9;
-          }
-        }
-        .notes {
-          position: absolute;
-          bottom: px(10);
-          right: px(10);
-        }
-      }
-    }
-    .战果, .作案手段 {
-      padding: 0 px(24);
-      > table {
-        width: 100%; table-layout: fixed;
-        margin-top: px(25);
-        border-collapse: collapse;
-        th, td {
-          border: 1px solid #1a3671;
-        }
-        thead {
-          th {
-            height: px(70);
-            box-shadow: inset 0 0 px(60) 0 #1f3d85;
-          }
-        }
-        tbody {
-          td {height: px(50); width: px(84);
-            background: #1c2456;
-          }
-        }
-      }
-    }
-    .作案手段 {
-      > table {
-        tbody {
-          td {
-            height: px(26);
-          }
-        }
-      }
-    }
-    .破获排名 {
-      height: px(423);
-      .legend {
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        width: 100%;
-        padding: 0 px(20) px(10);
-        > .first, > .second {
-          display: inline-block;
-          width: px(18); height: px(12);
-          background: red; margin: 0 px(10);
-        }
-        .first {
-          background: linear-gradient(90deg, #2034f9 0%, #04a1ff 100%);
-        }
-        .second {
-          background: linear-gradient(90deg, #b92ae8 0%, #6773e7 100%);
-        }
-      }
-    }
-  }
+			font-size: px(30);
+			> img {
+				cursor: pointer;
+				width: px(50);
+			}
+		}
+
+		> section {
+			text-align: center;
+		}
+		.bordered {
+			border: 1px solid #00bef8;
+			border-radius: 4px;
+			position: relative;
+			box-shadow: 0 0 2px 0 #0e325f, inset 0 0 2px 0 #0e325f;
+			background: rgba(15, 17, 58, 0.6);
+			&::before {
+				pointer-events: none;
+				content: "";
+				position: absolute;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				top: 0;
+				border-radius: 4px;
+				box-shadow: 17px 0 0 -16px #0e325f, -17px 0 0 -16px #0e325f, 0 17px 0 -16px #0e325f, 0 -17px 0 -16px #0e325f,
+					9px 0 0 -8px #0d4483, -9px 0 0 -8px #0d4483, 0 9px 0 -8px #0d4483, 0 -9px 0 -8px #0d4483;
+			}
+		}
+		.bordered2 {
+			border: 1px solid #00bef8;
+			position: relative;
+			box-shadow: 0 0 2px 0 #0e325f, inset 0 0 2px 0 #0e325f;
+			background: #0f113a;
+			&::before {
+				pointer-events: none;
+				content: "";
+				position: absolute;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				top: 0;
+				border-radius: 4px;
+				box-shadow: 17px 0 0 -16px #0e325f, -17px 0 0 -16px #0e325f, 0 17px 0 -16px #0e325f, 0 -17px 0 -16px #0e325f,
+					9px 0 0 -8px #0d4483, -9px 0 0 -8px #0d4483, 0 9px 0 -8px #0d4483, 0 -9px 0 -8px #0d4483;
+			}
+			> span {
+				line-height: 2;
+			}
+		}
+		.空调监控 {
+			height: px(363);
+		}
+
+		> .section3 {
+			grid-area: box3;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			.温湿度 {
+				height: px(800);
+			}
+			.section3-wrapper {
+				display: flex;
+				align-items: center;
+				justify-content: space-around;
+				& > div {
+					display: flex;
+					padding: 10px 0;
+					align-items: center;
+					justify-content: center;
+					flex-direction: column;
+					width: 20%;
+					> .button {
+						padding: 2px 8px;
+						background: linear-gradient(180deg, #024ad8, #6993ff);
+					}
+				}
+			}
+		}
+		> .section4 {
+			grid-area: box4;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+		}
+		> .section5 {
+			grid-area: box5;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+		}
+		.管辖统计,
+		.破获排名,
+		.发案趋势,
+		.案发时段,
+		.战果,
+		.籍贯,
+		.年龄段,
+		.案发类型,
+		.案发街道,
+		.作案手段,
+		.温湿度 {
+			height: px(315);
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			h2 {
+				margin-bottom: px(10);
+				flex-shrink: 0;
+				border: 1px solid #0a5299;
+				border-bottom-left-radius: 4px;
+				border-bottom-right-radius: 4px;
+				font-size: px(22);
+				line-height: px(24);
+				padding: px(10) px(28);
+				text-shadow: 0 0 px(3) white;
+			}
+			.charts {
+				width: 100%;
+				flex: 1;
+				display: flex;
+			}
+			.chart {
+				flex: 1;
+				width: 100%;
+			}
+		}
+		.发案趋势,
+		.案发时段 {
+			height: px(363);
+		}
+		.chart11,
+		.chart12 {
+			flex: 1;
+			display: flex;
+			flex-direction: column;
+			> .chart {
+				display: flex;
+				> .main {
+					flex: 1;
+				}
+			}
+			.legend {
+				@extend %legend;
+			}
+		}
+		.年龄段 {
+			display: flex;
+			flex-direction: column;
+			height: px(363);
+
+			&-图1,
+			&-图2,
+			&-图3 {
+				flex: 1;
+				display: flex;
+				flex-direction: column;
+			}
+			&-图1,
+			&-图2 {
+				.legend {
+					@extend %legend;
+					.male {
+						background: #33a4fa;
+					}
+					.female {
+						background: #8d70f8;
+					}
+				}
+				.chart {
+					position: relative;
+					display: flex;
+					> .main {
+						flex: 1;
+					}
+					> .text {
+						position: absolute;
+						top: 50%;
+						left: 50%;
+						transform: translate(-50%, -50%);
+						color: #33a4fa;
+						font-size: px(40);
+						text-shadow: 0 0 px(20) #33a4fa;
+						font-weight: bold;
+					}
+				}
+			}
+			&-图2 {
+				width: px(290);
+				flex-shrink: 0;
+				.legend {
+					justify-content: flex-start;
+				}
+			}
+			&-图3 {
+				border: 1px solid #08397d;
+				h3 {
+					font-size: px(20);
+					color: #7ab6db;
+					margin-top: px(6);
+				}
+			}
+		}
+		.籍贯 {
+			height: px(753);
+			background: transparent;
+			> .wrapper {
+				position: relative;
+				width: 100%;
+				flex: 1;
+				display: flex;
+				flex-direction: column;
+				.chart {
+					flex: 1;
+				}
+				.legend {
+					position: absolute;
+					top: px(40);
+					left: px(20);
+					display: flex;
+					align-items: center;
+					font-size: px(22);
+					padding: px(20) px(10) px(20) 0;
+					border-radius: 0;
+					.icon {
+						margin: 0 px(10);
+						display: inline-block;
+						width: px(16);
+						height: px(16);
+						border-radius: 50%;
+						background: #1cecd9;
+					}
+				}
+				.notes {
+					position: absolute;
+					bottom: px(10);
+					right: px(10);
+				}
+			}
+		}
+		.战果,
+		.作案手段 {
+			padding: 0 px(24);
+			> table {
+				width: 100%;
+				table-layout: fixed;
+				margin-top: px(25);
+				border-collapse: collapse;
+				th,
+				td {
+					border: 1px solid #1a3671;
+				}
+				thead {
+					th {
+						height: px(70);
+						box-shadow: inset 0 0 px(60) 0 #1f3d85;
+					}
+				}
+				tbody {
+					td {
+						height: px(50);
+						width: px(84);
+						background: #1c2456;
+					}
+				}
+			}
+		}
+		.作案手段 {
+			> table {
+				tbody {
+					td {
+						height: px(26);
+					}
+				}
+			}
+		}
+		.破获排名 {
+			height: px(423);
+			.legend {
+				display: flex;
+				align-items: center;
+				justify-content: flex-end;
+				width: 100%;
+				padding: 0 px(20) px(10);
+				> .first,
+				> .second {
+					display: inline-block;
+					width: px(18);
+					height: px(12);
+					background: red;
+					margin: 0 px(10);
+				}
+				.first {
+					background: linear-gradient(90deg, #2034f9 0%, #04a1ff 100%);
+				}
+				.second {
+					background: linear-gradient(90deg, #b92ae8 0%, #6773e7 100%);
+				}
+			}
+		}
+	}
 }
