--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -22,6 +22,7 @@
 	background-size: cover;
 	color: white;
 	font-size: px(16);
+	font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 	> header {
 		height: px(99);
 		background-size: cover;
@@ -35,6 +36,23 @@
 		position: relative;
 		left: 0;
 		right: 0;
+		> .now {
+			position: absolute;
+			top: px(10);
+			left: px(300);
+			// transform: translateX();
+			font-size: px(20);
+			display: flex;
+			align-items: end;
+			> span {
+				font-size: px(40);
+			}
+			> div {
+				margin-left: 0.5em;
+				display: flex;
+				flex-direction: column;
+			}
+		}
 		.header-time {
 			position: absolute;
 			top: px(10);
