--- a/src/pages/setting/setting.scss
+++ b/src/pages/setting/setting.scss
@@ -12,7 +12,7 @@
 	.img-wrapper {
 		position: relative;
 		#wrapper {
-			border: 2px dashed red;
+			border: 2px dashed rgb(124, 124, 124);
 		}
 		img {
 			width: 100%;
@@ -31,10 +31,24 @@
 	left: 0;
 	background: rgba(36, 9, 81, 0.6);
 	color: #fff;
-	border-radius: 6px;
-	font-size: px(30);
+	border-radius: px(20);
+	font-size: px(25);
 	padding: px(10);
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	&-title {
+		line-height: 2;
+	}
+	> ul {
+		li {
+			font-family: Arial, sans-serif, microsoft yahei, Microsoft YaHei, "\5FAE\8F6F\96C5\9ED1", Helvetica Neue,
+				Helvetica, PingFang SC, Hiragino Sans GB;
+			list-style: 1.5;
+		}
+	}
+
 	&.active {
-		border: 1px solid red;
+		border: 1px solid rgb(53, 53, 53);
 	}
 }
