--- a/src/pages/setting/setting.scss
+++ b/src/pages/setting/setting.scss
@@ -1,54 +1,75 @@
 @import "../../shared/helper";
+
 .setting {
-	display: flex;
-	justify-content: space-between;
-	-moz-user-select: none; /*火狐*/
-	-webkit-user-select: none; /*webkit浏览器*/
-	-ms-user-select: none; /*IE10*/
-	-khtml-user-select: none; /*早期浏览器*/
-	user-select: none;
-	background: #fff;
-	flex: 1;
-	.img-wrapper {
-		position: relative;
-		#wrapper {
-			border: 2px dashed rgb(124, 124, 124);
-		}
-		img {
-			width: 100%;
-		}
-	}
-	.right {
-		width: 800px;
-	}
+  display: flex;
+  justify-content: space-between;
+  -moz-user-select: none; /*火狐*/
+  -webkit-user-select: none; /*webkit浏览器*/
+  -ms-user-select: none; /*IE10*/
+  -khtml-user-select: none; /*早期浏览器*/
+  user-select: none;
+  background: #fff;
+  flex: 1;
+
+  .img-wrapper {
+    position: relative;
+
+    #wrapper {
+      border: 2px dashed rgb(124, 124, 124);
+    }
+
+    img {
+      width: 100%;
+    }
+  }
+
+  .right {
+    width: 800px;
+  }
 }
 
 .card {
-	box-sizing: border-box;
-	cursor: pointer;
-	position: absolute;
-	top: 0;
-	left: 0;
-	background: rgba(36, 9, 81, 0.6);
-	color: #fff;
-	border-radius: px(20);
-	font-size: px(25);
-	padding: px(10);
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	&-title {
-		line-height: 2;
-	}
-	> ul {
-		li {
-			font-family: Arial, sans-serif, microsoft yahei, Microsoft YaHei, "\5FAE\8F6F\96C5\9ED1", Helvetica Neue,
-				Helvetica, PingFang SC, Hiragino Sans GB;
-			list-style: 1.5;
-		}
-	}
+  box-sizing: border-box;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(36, 9, 81, 0.6);
+  color: #fff;
+  border-radius: px(20);
+  font-size: px(25);
+  padding: px(10);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 
-	&.active {
-		border: 1px solid rgb(53, 53, 53);
-	}
+  &::before {
+    content: '';
+    display: inline-flex;
+    position: absolute;
+    width: 0;
+    height: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 100%;
+    border-style: solid;
+    border-width: px(10);
+    border-color: rgba(36, 9, 81, 0.6) transparent transparent transparent;
+  }
+
+  &-title {
+    line-height: 2;
+  }
+
+  > ul {
+    li {
+      font-family: Arial, sans-serif, microsoft yahei, Microsoft YaHei, "\5FAE\8F6F\96C5\9ED1", Helvetica Neue,
+      Helvetica, PingFang SC, Hiragino Sans GB;
+      list-style: 1.5;
+    }
+  }
+
+  &.active {
+    border: 1px solid rgb(53, 53, 53);
+  }
 }
